# docs/swagger.json
@@ -253,6 +253,63 @@
                 }
             }
         },
+        "/content": {
+            "post": {
+                "security": [
+                    {
+                        "_csrf": []
+                    }
+                ],
+                "description": "Создание контента",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "content"
+                ],
+                "summary": "Создание контента",
+                "parameters": [
+                    {
+                        "description": "Контент",
+                        "name": "content",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Content"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Content"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/content/person/{id}": {
             "get": {
                 "description": "Получение персоны по id",
@@ -1711,7 +1768,7 @@
             "properties": {
                 "firstName": {
                     "type": "string",
-                    "example": "Киану"
+                    "example": "Том"
                 },
                 "id": {
                     "type": "integer",
@@ -1719,7 +1776,7 @@
                 },
                 "lastName": {
                     "type": "string",
-                    "example": "Ривз"
+                    "example": "Хэнкс"
                 }
             }
         },
